<resources>
    <string name="text_app_name">RecipesApp</string>
    <string name="text_category">Категории</string>
    <string name="text_favorites">Избранное</string>
    <string name="text_main_fragment">Основной фрагмент</string>
    <string name="text_recipes_list_title">Список рецептов в категории</string>
    <string name="category_image_description">Изображение для карточки категории %1$s</string>
    <string name="category_header_image_description">Изображение для списка категорий %1$s</string>
    <string name="recipe_header_image_description">Изображение для рецепта %1$s</string>
    <string name="recipes_list_img_description">Изображение для категории </string>
    <string name="recipes_img_description">Изображение для рецепта </string>
    <string name="recipes_img_favorite_description">Значок для избранного </string>
    <string name="recipe_img_header_text">Название рецепта</string>
    <string name="get_recipes_error">Ошибка. Мы уже работаем над этим</string>
    <string name="recipe_icon_favorite">Значок избранное</string>
    <string name="ingredients_title">Ингредиенты</string>
    <string name="method_title">Способ приготовления</string>
    <string name="ingredient_display_format">%1$s %2$s</string>
    <string name="method_display_format">%1$s. %2$s</string>
    <string name="portions_count">Порции: </string>
    <string name="portion_default_count">1</string>
    <string name="favorites_list_img_description">Изображение для избранного</string>
    <string name="favorites_empty_list">Вы еще не добавили ни одного рецепта в избранное</string>
</resources>